--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
+body {
+    padding-top: 85px;
+}
+
+.navbar {
+    background: #e3edfd;
+    font-family: 'Caveat', cursive;
+    font-size: 24px;
+}
+
+.nav-link.active {
+    color: #6c757d;
+}
+
 .bd-placeholder-img {
     font-size: 1.125rem;
     text-anchor: middle;
@@ -9,7 +24,6 @@
 .main-formularios {
     margin-top: 100px;
 }
-
 
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
