--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,12 @@ h1 {
     font-weight: 900;
     margin: 30px 0 60px 0;
 }
+
+.marketing h2 {
+    font-size: 32px;
+    font-weight: bold;
+    margin-top: 15px;
+}
 .descrip {
     border: 1px solid red;
 }
@@ -30,23 +36,23 @@ h1 {
     height: 150px;
 }
 
-.footer-piola {
+.footer-weeneemy {
     background-color: black;
     color: blanchedalmond; 
     text-align: center;
 }
 
-.footer-piola a  {
+.footer-weeneemy a  {
     color: white;
     text-decoration: none;
 
 }
 
-.footer-piola a:visited {
+.footer-weeneemy a:visited {
     color: teal;
 }
 
-.footer-piola a:hover {
+.footer-weeneemy a:hover {
     color: tomato;
     font-weight: bold;
     text-decoration: underline;
@@ -75,7 +81,10 @@ h1 {
     margin-top: 100px;
 }
 
-
+.form-newsletter{
+    max-width: 400px;
+    margin: auto;
+}
 
 @media (min-width: 768px) {
     .bd-placeholder-img-lg {
