--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,21 @@ body {
 
 
 h1 {
-    font-family: 'Merriweather', serif;
+    
     font-weight: 900;
     margin: 30px 0 60px 0;
+}
+
+.iconitos {
+    font-size: 11px;
+}
+
+.iconitos .material-icons {
+    vertical-align: middle;
+}
+
+.thumb {
+    max-width: 100px;
 }
 
 .marketing h2 {
