--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
-
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
 body {
  
@@ -15,7 +13,7 @@ body {
 }
 
 #listado .btn:hover {
-    background-color: darkmagenta;
+    background-color: red;
     color: white;
 }
 
@@ -24,10 +22,10 @@ body {
 
 .home-banner {
   background-image: url("./imgs/home.jpeg"); /* The image used */
-  height: 150px;
+  height: 250px;
   background-position: center; /* Center the image */
   background-repeat: no-repeat; /* Do not repeat the image */
-  background-size: contain; /* Resize the background image to cover the entire container */
+  background-size: cover; /* Resize the background image to cover the entire container */
 }
 
 
@@ -105,7 +103,7 @@ h1 {
     text-decoration: underline;
 }
 
- .navbar-brand {
+ .navbar-brand, #circulitos h2, #nombre-producto h1 {
     font-family: 'Dancing Script', cursive;
     font-size: 32px;
     color: darkred !important;;
